# mlops-23-autumn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.dvc/: config
mlops-23-autumn/: best_model.pt  infer.py  model.py  train.py
mlops-23-autumn/answers/human_activity_predictions/: .gitignore  human_activity_predictions.csv  human_activity_predictions.csv.dvc
mlops-23-autumn/configs/: conf.yaml
mlops-23-autumn/data/: model.onnx.dvc
mlops-23-autumn/datasets/human_activity_predictions/: test.csv.dvc  train.csv.dvc
mlops-23-autumn/triton/: Dockerfile  README.md  client.py  docker-compose.yaml
mlops-23-autumn/triton/model_repository/onnx-human-activity/: config.pbtxt
mlops-23-autumn/triton/model_repository/onnx-human-activity/1/: .gitignore  model.onnx
