[tool.poetry]
name = "mlops-23-autumn"
version = "0.1.0"
description = "Project for my tasks in mlops course"
authors = ["Ilya Kochagin <ilyakochagin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
